# aiocdp

./: .gitignore  README.md  generate.py  generator.py  pyproject.toml  requirements.txt  setup.py  tests.py
aiocdp/: __init__.py  exceptions.py  factories.py  ioc.py  utils.py
aiocdp/core/: __init__.py
cdp/: __init__.py  chrome.py  domain.py  domains.py  domains.pyi  io.py  io.pyi  target.py  utils.py
cdp/connection/: connection.py  response.py  stream.py
cdp/domains/: __init__.py  base.py  conversions.py  domain.py  domains.py  domains.pyi  dynamic.py  mapper.py  mappers.py  type_registry.py  utils.py
cdp/types/: accessibility.py  animation.py  audits.py  autofill.py  background_service.py  browser.py  cache_storage.py  cast.py  console.py  css.py  database.py  debugger.py  device_access.py  device_orientation.py  dom.py  dom_debugger.py  dom_snapshot.py  dom_storage.py  emulation.py  fed_cm.py  fetch.py  headless_experimental.py  heap_profiler.py  indexed_db.py  input.py  inspector.py  io.py  layer_tree.py  log.py  media.py  memory.py  network.py  overlay.py  page.py  performance.py  performance_timeline.py  preload.py  profiler.py  runtime.py  schema.py  (+9 more)
generator/: ast.py  generate.py  type_registry.py  utils.py  visitor.py
generator/ast/: __init__.py  domain.py  domains.py  generic_domain.py  generic_types.py  mapper.py  types.py  utils.py  visitor.py
generator/generators/: __init__.py  domain.py  generate_domain.py  generate_domains.py  generate_mapper.py  generate_types.py  types.py  visitor.py
pycdp/: __init__.py  chrome.py  exceptions.py  logging.py  stream.py  target.py  utils.py
(+193 files in other folders)
