[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiocdp"
version = "1.1.0"
description = "High performance, asynchronous python module for programatic access to Chrome DevTools Protocol."
readme = "README.md"
authors = [
    {name = "Amir Sharapov", email = "amirsharapov.personal@gmail.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "cdp",
    "chrome devtools protocol",
    "chrome",
    "devtools",
    "browser",
    "automation"
]
dependencies = [
    'websockets',
    'requests'
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/amirdevstudio/aiocdp"
